# Pico-Things

./: .gitmodules  CMakeLists.txt  README.md  pico_sdk_import.cmake
.github/: README.md
examples/: CMakeLists.txt
examples/C/: CMakeLists.txt
examples/audio/: CMakeLists.txt
examples/bluetooth/: CMakeLists.txt  main.c
examples/calendar/: CMakeLists.txt  main.c
examples/display/: CMakeLists.txt
examples/gps/: CMakeLists.txt  main.c
examples/keypad/: CMakeLists.txt  main.c
examples/l293d/: CMakeLists.txt  main.c
examples/radio/: CMakeLists.txt
examples/sd/: CMakeLists.txt  main.c
examples/sdcard/: CMakeLists.txt  main.c
examples/sdio/: CMakeLists.txt  main.c
examples/stepper/: CMakeLists.txt  main.c
examples/terminal/: CMakeLists.txt  main.c
libraries/: CMakeLists.txt
libraries/C/: CMakeLists.txt
libraries/audio/: CMakeLists.txt
libraries/bluetooth/: CMakeLists.txt  bluetooth.h
libraries/calendar/: CMakeLists.txt  calendar.h
libraries/display/: CMakeLists.txt
libraries/gps/: CMakeLists.txt  gps.h  old.h
libraries/hx711/: CMakeLists.txt  hx711.h  hx711.pio
libraries/keypad/: CMakeLists.txt  keypad.h
libraries/l293d/: CMakeLists.txt
libraries/list/: CMakeLists.txt  list.h
libraries/morse/: CMakeLists.txt  morse.h  table.h
libraries/motor/: CMakeLists.txt
libraries/radio/: CMakeLists.txt
libraries/sd/: CMakeLists.txt
libraries/sdcard/: CMakeLists.txt  hw_config.c  sdcard.h
libraries/sdio/: CMakeLists.txt  sdio.c  sdio.h  sdio.pio
libraries/stepper/: CMakeLists.txt  stepper.h
projects/: CMakeLists.txt
(+89 files in other folders)
